# qfm1000

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  README.md  appveyor.yml  shippable.yml  sonar-project.properties
.circleci/: config.yml
.github/workflows/: build-and-tests-linux.yml  build-and-tests-macos.yml  build-and-tests-windows.yml  build-and-tests.yml  codecov.yml  codeql-analysis.yml  coverity-scan.yml
arduino/: README.md
arduino/eeprom_programmer/: eeprom_programmer.cpp  eeprom_programmer.ino
cmake/: flags.cmake  packaging.cmake  qt.cmake
desktop/: CMakeLists.txt  qfm1000.desktop.in
icons/: prepare.sh
icons/macos/: icon.icns
patch/: qt-5.15.2_gcc-11.patch
resources/text/: about.html
src/: CMakeLists.txt  qfm1000.cpp  qfm1000.hpp  qfm1000.rc  resources.qrc  version.hpp  version.hpp.in
src/app/: CMakeLists.txt  app.cpp  app.hpp  config.cpp  config.hpp  default.hpp  instance.cpp  instance.hpp  main.cpp  main.hpp  qfm1000.cpp  qfm1000.hpp  qfm1000.qrc  qfm1000.rc  status.cpp  status.hpp  version.hpp.in
src/app/config/: default.hpp  manager.hpp
src/app/windows/: about.cpp  about.hpp  about.ui  arduinowindow.cpp  config.cpp  config.hpp  config.ui  configwindow.cpp  configwindow.ui  eeprom.cpp  eeprom.hpp  eeprom.ui  inoprog.cpp  inoprog.hpp  inoprog.ui  instance.cpp  instance.hpp  instance.ui  license.cpp  license.hpp  license.ui  main.cpp  main.hpp  main.ui  mainwindow.cpp
src/app/windows/model/: flagdelegate.cpp  readonlydelegate.hpp  squelchdelegate.cpp  squelchdelegate.hpp  tablemodel.cpp
src/app/windows/widgets/: statusbar.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp  default.hpp  manager.cpp  manager.hpp  status.cpp  status.hpp
src/delegators/: CMakeLists.txt  ctcss.cpp  ctcss.hpp  flag.cpp  flag.hpp  power.cpp  power.hpp  readonly.cpp  readonly.hpp  squelch.cpp  squelch.hpp
src/delegators/sample/: main.cpp
src/eeprom/: CMakeLists.txt  channel.cpp  channel.hpp  ctcss.cpp  ctcss.hpp  eeprom.cpp  eeprom.hpp  filemanager.cpp  filemanager.hpp  model.cpp  model.hpp  programmer.cpp  programmer.hpp  values.cpp  values.hpp
src/eeprom/test/: eeprom.cpp  eeprom.hpp  eeprombyte.cpp  eeprombyte.hpp  eeprombytetest.cpp  eeprombytetest.hpp  eepromtest.cpp  eepromtest.hpp  values.cpp  values.hpp
src/inoprog/: CMakeLists.txt  inoprog.cpp  inoprog.hpp
src/programmer/: CMakeLists.txt  arduino.cpp  arduino.hpp  programmer.cpp  programmer.hpp
src/programmer/test/: programmer_test.cpp  programmer_test.hpp
src/utilities/: CMakeLists.txt  serialport.cpp  serialport.hpp  service.cpp  service.hpp
src/widgets/: CMakeLists.txt  hexeditor.cpp  hexeditor.hpp
src/widgets/sample/: main.cpp
src/windows/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.hpp  aboutwindow.ui  arduinowindow.cpp  arduinowindow.hpp  arduinowindow.ui  configwindow.cpp  configwindow.hpp  configwindow.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/windows/model/: ctcss.hpp  ctcssdelegate.cpp  ctcssdelegate.hpp  flagdelegate.cpp  flagdelegate.hpp  helper.hpp  powerdelegate.cpp  powerdelegate.hpp  readonlydelegate.cpp  readonlydelegate.hpp  squelchdelegate.cpp  squelchdelegate.hpp  tablemodel.cpp  tablemodel.hpp  utilities.cpp  utilities.hpp
src/windows/widgets/: statusbar.cpp  statusbar.hpp
test/: CMakeLists.txt
test/eeprom/: CMakeLists.txt  eeprom.hpp  filemanager.cpp  filemanager.hpp  values.cpp  values.hpp
tests/: CMakeLists.txt
tests/windows/: CMakeLists.txt
tests/windows/model/: CMakeLists.txt  utilities.cpp  utilities.hpp
